src/objects/Assigned_User__c.object
<CustomObject>
    <fields>
        <fullName>Agency_wide_Audit_and_Assigned_Users__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency wide Audit and Assigned Users</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>PO</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>GO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Assigned_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_wide_audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency wide audit</label>
        <referenceTo>Agency_wide_Audit__c</referenceTo>
        <relationshipLabel>Assigned Users</relationshipLabel>
        <relationshipName>Assigned_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_User_Role__c</fullName>
        <label>Assigned User Role</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned CNCS GO’s for Audited Awards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned CNCS PO’s for Audited Awards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized Viewers</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Assigned User</label>
    <nameField>
        <label>Assigned User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assigned Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>